@@ -11,6 +11,7 @@ Engine features:
 * Added support for defining the colors of tiles and entities on the minimap.
 * Added 'show_on_minimap' event component. Currently, this only applies to intermap teleport events.
 * Added 'show_on_minimap' property to NPCs.
+* Properties that take an alignment can now be aligned to the menu frame.
 
 Engine fixes:
 
